tdf#124787 mso-spt143 (RingOutside) has angles in degree

When reworking command U the shape 'RingOutside' was not considered.
Although it is a 'mso-' shape, it has angles in degree and not in
fixed-point number in its defaults. The patch removes in addition the
changes introduced by Symphony, which erroneously used total width
and height instead of radii for the ellipse size.

Change-Id: Iede8e346681796fb3e147dbcfaaa08ed8fe87c54
Reviewed-on: https://gerrit.libreoffice.org/70941
Tested-by: Jenkins
Reviewed-by: Regina Henschel <rb.henschel@t-online.de>